--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,9 +76,8 @@ jobs:
           DB_PORT: 5432
           DB_USER: postgres
           DB_PASSWORD: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
           # DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
-        run: bin/rails db:create && bin/rails db:test:prepare test
-
-      - name: Debug environment variables
-        run: echo "DB_USER: $DB_USER, DB_PASSWORD: $DB_PASSWORD, DB_HOST: $DB_HOST, DB_PORT: $DB_PORT"
+        run: bin/rails db:create --ENV=test && bin/rails db:test:prepare test
