--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgres:13.2
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
@@ -89,7 +89,6 @@ jobs:
           # DATABASE_URL: postgres://postgres:postgres@localhost:5432
           # REDIS_URL: redis://localhost:6379/0
         run: |
-          bin/rails db:drop RAILS_ENV=test
           bin/rails db:create RAILS_ENV=test
           bin/rails db:migrate RAILS_ENV=test
           bin/rails test --verbose
