--- a/test/fixtures/plans.yml
+++ b/test/fixtures/plans.yml
@@ -5,7 +5,7 @@ one:
   price_cents: 100
   interval: 0
   client_limit: 50
-  profissional_limit: 1
+  professional_limit: 1
   whatsapp_notifications: false
   email_notifications: false
   description: MyText
@@ -15,7 +15,7 @@ two:
   price_cents: 1000
   interval: 0
   client_limit: 500
-  profissional_limit: 3
+  professional_limit: 3
   whatsapp_notifications: true
   email_notifications: true
   description: MyText
@@ -25,7 +25,7 @@ three:
   price_cents: 10000
   interval: 0
   client_limit: nil
-  profissional_limit: nil
+  professional_limit: nil
   email_notifications: true
   whatsapp_notifications: true
   description: MyText
